--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
   <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
-  <script type="module" src="./src/script.js"></script>
+  <script src="config.js"></script>
+  <script src="src/script.js" type="module"></script>
 </body>
 </html>
