Implement seamless online/offline gameplay and improve initialization
Implement seamless online/offline gameplay and improve initialization

- Added server status check and display
- Implemented smooth loading screen with progress messages
- Created separate online and offline game initialization paths
- Improved texture loading process with error handling
- Enhanced player controls for both online and offline modes
- Implemented collision detection and sliding
- Added flying, sprinting, and sneaking capabilities
- Improved chunk generation and management
- Implemented simplex noise for terrain generation
- Added basic biome system
- Implemented cave and ore generation
- Optimized render distance and chunk loading/unloading
- Improved player movement physics
- Enhanced lighting system for better visuals
- Implemented multiplayer support for online mode
- Added fallback to offline mode when server is unavailable
- Improved code structure and modularity
- Enhanced error handling and logging throughout the application

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,9 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Minecraft Game">
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" type="image/png" href="./images/favicon/favicon-48x48.png" sizes="48x48" />
+  <link rel="icon" type="image/svg+xml" href="./images/favicon/favicon.svg" />
+  <link rel="shortcut icon" href="./images/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Minecraft Voxel " />
+  <link rel="manifest" href="./images/favicon/site.webmanifest" />
+
+  <link rel="manifest" href="/site.webmanifest">
   <title>Minecraft Game</title>
 </head>
 <body>
+  <span id="server-status"></span>
+  </div>
   <div id="hud">
     Health: <span id="health">100</span>
   </div>
