Enhance user interface and implement online/offline functionality
- Added stylized intro pop-up with game information and links
- Implemented Minecraft-style font and textures for UI elements
- Created seamless transition between online and offline modes
- Improved server status checking and display
- Enhanced loading screen with progress messages
- Optimized chunk generation and management
- Implemented client-side prediction for smoother gameplay
- Added basic biome system with varied terrain generation
- Improved lighting system for better visual quality
- Enhanced player movement physics and collision detection
- Implemented inventory system (basic functionality)
- Added crafting system foundation
- Optimized rendering performance with instanced meshes
- Improved error handling and logging throughout the application
- Updated documentation with new features and gameplay instructions
- Fixed various bugs related to world generation and player interaction

Technical improvements:
- Refactored code for better modularity and maintainability
- Implemented Web Worker for off-main-thread chunk generation
- Optimized texture atlas usage for improved memory management
- Enhanced network code for more efficient multiplayer synchronization
- Improved build process and asset management

This update significantly enhances the game's look and feel, improves performance, and lays the groundwork for more advanced features in future updates.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,37 @@
   <title>Minecraft Game</title>
 </head>
 <body>
+  <div id="intro-popup">
+    <button id="close-popup">&times;</button>
+    <h2>Welcome to My Minecraft-like Game!</h2>
+    <p>Hi, I'm Pavel. This project is a Minecraft-inspired game built with Three.js and modern web technologies.</p>
+    <h5>Key features:</h5>
+    <ul>
+      <li>Procedurally generated terrain</li>
+      <li>Multiplayer support</li>
+      <li>Customizable world settings</li>
+    </ul>
+    <h5>Game Modes:</h5>
+    <ul>
+      <li><strong>Online:</strong> Connect with others, sync world data</li>
+      <li><strong>Offline:</strong> Play solo with local world generation</li>
+    </ul>
+    <p>The game automatically switches between modes based on server availability.</p>
+    <h5>Controls:</h5>
+    <ul>
+      <li><strong>WASD</strong> to move</li>
+      <li><strong>Space</strong> to jump</li>
+      <li><strong>Shift</strong> to crouch</li>
+      <li><strong>Mouse</strong> to look around</li>
+      <li><strong>Left Click</strong> to destroy blocks</li>
+      <li><strong>Right Click</strong> to place blocks</li>
+      <li><strong>f</strong> to fly</li>
+      <li><strong>N</strong> to show map</li>
+    </ul>
+    <h5>Learn more:</h5>
+    <a href="https://github.com/yourusername/your-repo" target="_blank" class="minecraft-button">GitHub Repository</a>
+    <a href="https://www.notion.so/your-notion-page" target="_blank" class="minecraft-button">Project Documentation</a>
+  </div>
   <span id="server-status"></span>
   </div>
   <div id="hud">
