--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -44,8 +44,8 @@
       <li><strong>N</strong> to show map</li>
     </ul>
     <h5>Learn more:</h5>
-    <a href="https://github.com/yourusername/your-repo" target="_blank" class="minecraft-button">GitHub Repository</a>
-    <a href="https://www.notion.so/your-notion-page" target="_blank" class="minecraft-button">Project Documentation</a>
+    <a href="https://github.com/pstepanovum/minecraft-classic.git" target="_blank" class="minecraft-button">GitHub Repository</a>
+    <a href="https://lucky-quokka-0a7.notion.site/Web-Minecraft-Development-1133d74755a8807aadd0fe1890d31aad?pvs=4" target="_blank" class="minecraft-button">Project Documentation</a>
   </div>
   <span id="server-status"></span>
   </div>
