Directional Buttons for Mobile Devices
We added on-screen directional buttons to provide movement controls for mobile users. These buttons mimic the WASD keys and are arranged in a "T" shape.

Directional Buttons: Added on-screen directional buttons for mobile users.
CSS Media Query: Ensured the buttons are only visible on small screens.
JavaScript: Handled touch events for the buttons and added a highlight effect for corresponding key presses.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -86,6 +86,12 @@
   <span id="server-status"></span>
   </div>
   <div id="target"></div>
+  <div id="controls">
+    <button id="up" class="control-button" style="grid-column: 2; grid-row: 1;">↑</button>
+    <button id="left" class="control-button" style="grid-column: 1; grid-row: 2;">←</button>
+    <button id="down" class="control-button" style="grid-column: 2; grid-row: 2;">↓</button>
+    <button id="right" class="control-button" style="grid-column: 3; grid-row: 2;">→</button>
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
   <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
