--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Minecraft Voxel " />
   <link rel="manifest" href="./images/favicon/site.webmanifest" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <link rel="manifest" href="/site.webmanifest">
   <title>Minecraft Game</title>
@@ -87,11 +88,22 @@
   </div>
   <div id="target"></div>
   <div id="controls">
-    <button id="up" class="control-button" style="grid-column: 2; grid-row: 1;">↑</button>
-    <button id="left" class="control-button" style="grid-column: 1; grid-row: 2;">←</button>
-    <button id="down" class="control-button" style="grid-column: 2; grid-row: 2;">↓</button>
-    <button id="right" class="control-button" style="grid-column: 3; grid-row: 2;">→</button>
+    <div id="left-controls">
+      <button id="up" class="control-button" style="grid-column: 2; grid-row: 1;">↑</button>
+      <button id="left" class="control-button" style="grid-column: 1; grid-row: 2;">←</button>
+      <button id="down" class="control-button" style="grid-column: 2; grid-row: 2;">↓</button>
+      <button id="right" class="control-button" style="grid-column: 3; grid-row: 2;">→</button>
   </div>
+  
+  <div id="right-controls">
+      <button id="fly" class="control-button" style="grid-column: 1; grid-row: 1;">
+          <i class="fas fa-plane"></i>
+      </button>
+      <button id="jump" class="control-button" style="grid-column: 1; grid-row: 2;">
+          <i class="fas fa-arrow-up"></i>
+      </button>
+  </div>
+</div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
   <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
