--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -89,20 +89,24 @@
   <div id="target"></div>
   <div id="controls">
     <div id="left-controls">
-      <button id="up" class="control-button" style="grid-column: 2; grid-row: 1;">↑</button>
-      <button id="left" class="control-button" style="grid-column: 1; grid-row: 2;">←</button>
-      <button id="down" class="control-button" style="grid-column: 2; grid-row: 2;">↓</button>
-      <button id="right" class="control-button" style="grid-column: 3; grid-row: 2;">→</button>
-  </div>
+        <button id="up" class="control-button" style="grid-column: 2; grid-row: 1;">↑</button>
+        <button id="left" class="control-button" style="grid-column: 1; grid-row: 2;">←</button>
+        <button id="down" class="control-button" style="grid-column: 2; grid-row: 2;">↓</button>
+        <button id="right" class="control-button" style="grid-column: 3; grid-row: 2;">→</button>
+    </div>
   
-  <div id="right-controls">
-      <button id="fly" class="control-button" style="grid-column: 1; grid-row: 1;">
-          <i class="fas fa-plane"></i>
-      </button>
-      <button id="jump" class="control-button" style="grid-column: 1; grid-row: 2;">
-          <i class="fas fa-arrow-up"></i>
-      </button>
-  </div>
+    <div id="right-controls">
+        <button id="fly" class="control-button" style="grid-column: 1; grid-row: 1;">
+            <i class="fas fa-plane"></i>
+        </button>
+        <button id="jump" class="control-button" style="grid-column: 1; grid-row: 2;">
+            <i class="fas fa-arrow-up"></i>
+        </button>
+        <button id="place" class="control-button" style="grid-column: 1; grid-row: 3;">
+            <i class="fas fa-cube"></i>
+        </button>
+    </div>
+</div>
 </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
