--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -88,24 +88,75 @@
   </div>
   <div id="target"></div>
   <div id="controls">
-    <div id="left-controls">
-        <button id="up" class="control-button" style="grid-column: 2; grid-row: 1;">↑</button>
-        <button id="left" class="control-button" style="grid-column: 1; grid-row: 2;">←</button>
-        <button id="down" class="control-button" style="grid-column: 2; grid-row: 2;">↓</button>
-        <button id="right" class="control-button" style="grid-column: 3; grid-row: 2;">→</button>
-    </div>
-  
-    <div id="right-controls">
-        <button id="fly" class="control-button" style="grid-column: 1; grid-row: 1;">
-            <i class="fas fa-plane"></i>
-        </button>
-        <button id="jump" class="control-button" style="grid-column: 1; grid-row: 2;">
-            <i class="fas fa-arrow-up"></i>
-        </button>
-        <button id="place" class="control-button" style="grid-column: 1; grid-row: 3;">
-            <i class="fas fa-cube"></i>
-        </button>
-    </div>
+      <div id="left-controls">
+          <button id="up" class="control-button" style="grid-column: 2; grid-row: 1;">
+              <svg fill="#FFFFFF" width="256px" height="256px" viewBox="0 0 22.00 22.00" xmlns="http://www.w3.org/2000/svg" id="memory-arrow-down" transform="rotate(180)">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                      <path d="M12 17H10V16H9V15H8V14H7V13H6V11H8V12H9V13H10V4H12V13H13V12H14V11H16V13H15V14H14V15H13V16H12"></path>
+                  </g>
+              </svg>
+          </button>
+          <button id="left" class="control-button" style="grid-column: 1; grid-row: 2;">
+              <svg fill="#FFFFFF" width="256px" height="256px" viewBox="0 0 22.00 22.00" xmlns="http://www.w3.org/2000/svg" id="memory-arrow-down" transform="rotate(90)">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                      <path d="M12 17H10V16H9V15H8V14H7V13H6V11H8V12H9V13H10V4H12V13H13V12H14V11H16V13H15V14H14V15H13V16H12"></path>
+                  </g>
+              </svg>
+          </button>
+          <button id="down" class="control-button" style="grid-column: 2; grid-row: 2;">
+              <svg fill="#FFFFFF" width="256px" height="256px" viewBox="0 0 22.00 22.00" xmlns="http://www.w3.org/2000/svg" id="memory-arrow-down" transform="rotate(0)">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                      <path d="M12 17H10V16H9V15H8V14H7V13H6V11H8V12H9V13H10V4H12V13H13V12H14V11H16V13H15V14H14V15H13V16H12"></path>
+                  </g>
+              </svg>
+          </button>
+          <button id="right" class="control-button" style="grid-column: 3; grid-row: 2;">
+              <svg fill="#FFFFFF" width="256px" height="256px" viewBox="0 0 22.00 22.00" xmlns="http://www.w3.org/2000/svg" id="memory-arrow-down" transform="rotate(270)">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                      <path d="M12 17H10V16H9V15H8V14H7V13H6V11H8V12H9V13H10V4H12V13H13V12H14V11H16V13H15V14H14V15H13V16H12"></path>
+                  </g>
+              </svg>
+          </button>
+      </div>
+    
+      <div id="right-controls">
+          <button id="fly" class="control-button" style="grid-column: 1; grid-row: 1;">
+              <svg fill="#ffffff" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg" id="memory-menu-up-down">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                      <path d="M4 10V8H5V7H6V6H7V5H8V4H9V3H10V2H12V3H13V4H14V5H15V6H16V7H17V8H18V10H4M4 12H18V14H17V15H16V16H15V17H14V18H13V19H12V20H10V19H9V18H8V17H7V16H6V15H5V14H4V12M8 8H14V7H13V6H12V5H10V6H9V7H8V8M8 14V15H9V16H10V17H12V16H13V15H14V14H8Z"></path>
+                  </g>
+              </svg>
+          </button>
+          <button id="jump" class="control-button" style="grid-column: 1; grid-row: 2;">
+              <svg fill="#ffffff" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg" id="memory-menu-up">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                      <path d="M18 14H4V12H5V11H6V10H7V9H8V8H9V7H10V6H12V7H13V8H14V9H15V10H16V11H17V12H18V14M14 12V11H13V10H12V9H10V10H9V11H8V12H14Z"></path>
+                  </g>
+              </svg>
+          </button>
+          <button id="place" class="control-button" style="grid-column: 1; grid-row: 3;">
+              <svg fill="#ffffff" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg" id="memory-pickaxe">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                      <path d="M8 2H11V3H13V4H15V5H17V7H18V9H19V11H20V14H18V12H17V11H16V10H14V9H13V8H12V6H11V5H10V4H8M11 9H12V10H13V11H12V12H11V13H10V14H9V15H8V16H7V17H6V18H5V19H4V20H3V21H2V20H1V19H2V18H3V17H4V16H5V15H6V14H7V13H8V12H9V11H10V10H11"></path>
+                  </g>
+              </svg>
+          </button>
+      </div>
+  </div>
 </div>
 </div>
 
