--- a/frontend/public/modes/research/index.html
+++ b/frontend/public/modes/research/index.html
@@ -61,6 +61,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.10.0/dist/tf.min.js"></script>
+    <script src="../../../public/src/web-worker/noise/simplex-noise.js"></script>
     <script src="../../config.js"></script>
     <script src="./src/script.js" type="module"></script>
   </body>
